# historical-racing-manager

./: LICENCE  Makefile  README.md  contracts.py  drivers.csv  drivers.py  f1.py  keepdrivers.csv  load.py  mytime.py  pyproject.toml  race.py  requirements.txt  series.py  setup.py  teams.py  testy.py  testytlaitko.py
.github/workflows/: code-style.yml  python-package.yml  tests.yml
ahoj/: CScontract.csv  DTcontract.csv  STcontract.csv  driver_stands.csv  drivers.csv  engine_stands.csv  pneu_stands.csv  races.csv  results.csv  rules.csv  series.csv  stands.csv  team_stands.csv
custom_original/: craces.csv
leftovers/: indycarsupportracesrf3-ustcc-ustouringcarchampionship-race1ustcc.csv
my_data/: CScontract.csv  DTcontract.csv  STcontract.csv  cdrivers.csv  chassi_stands.csv  circuit_layouts.csv  driver_stands.csv  drivers.csv  driversf1.csv  pointSystem.csv  races.csv  results.csv  series.csv  stands.csv  teams.csv
original/: your_file_name.csv
src/: .flake8  contracts.py  controller.py  drivers.py  f1.spec  graphics.py  load.py  manufacturer.py  pyproject.toml  race.py  series.py  teams.py
src/a/: DTcontract.csv  MScontract.csv  MTcontract.csv  car_parts.csv  data.csv  drivers.csv  pointSystem.csv  point_rules.csv  races.csv  results.csv  rules.csv  series.csv  teams.csv
src/abc/: CScontract.csv  DTcontract.csv  MTcontract.csv  STcontract.csv  car_part_models.csv  car_parts.csv  circuit_layouts.csv  data.csv  drivers.csv  point_rules.csv  races.csv  results.csv  rules.csv  series.csv  teams.csv
src/custom_original/: cdrivers.csv
src/historical_racing_manager/: consts.py  contracts.py  controller.py  drivers.py  graphics.py  load.py  main.py  manufacturer.py  (+3 more)
tests/: test_contracts.py  test_drivers.py  test_manufacturers.py  test_race.py  test_series.py  test_teams.py
(+71 files in other folders)
